# tree-sitter-comment

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  compile_flags.txt  go.mod  grammar.js  index.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter-comment.wasm  tree-sitter.json
.github/: FUNDING.yml
.github/workflows/: ci.yaml  publish.yml
bindings/c/: tree-sitter-comment.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_comment/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterComment/: comment.h
bindings/swift/TreeSitterCommentTests/: TreeSitterCommentTests.swift
docs/: index.html
docs/js/: tree-sitter-comment.wasm  tree-sitter-parser.wasm  tree-sitter.js  tree-sitter.wasm
src/: binding.cc  grammar.json  node-types.json  parser.c  scanner.c
src/tree_sitter_comment/: chars.c  chars.h  parser.c  parser.h  scanner.c  scanner.h  tokens.h
test/corpus/: source.txt
