[package]
name = "tree-sitter-comment"
description = "comment grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "comment"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/stsewd/tree-sitter-comment"
edition = "2018"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.19.2"

[build-dependencies]
cc = "1.0"
