[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-comment"
description = "Grammar for code tags like TODO:, FIXME(user): for the tree-sitter parsing library"
version = "0.3.0"
keywords = ["incremental", "parsing", "tree-sitter", "comment"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Santos Gallegos", email = "stsewd@proton.me" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/stsewd/tree-sitter-comment"
Funding = "https://github.com/sponsors/stsewd"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
